Improved page look (HTML and CSS)

--- a/artNotification.css
+++ b/artNotification.css
@@ -2,11 +2,32 @@ img {
   height: 200px;
   width: 400px;
   margin: auto;
-    width: 30%;
-    border: 3px solid #3E99CB;
-    padding: 10px;
-
+  width: 30%;
+  border: 3px solid #3E99CB;
+  padding: 10px;
 }
+
 body {
   background-color: #3E99CB;
+}
+#header1{
+  text-align: center;
+  color: #1C2A48;
+  text-shadow: 2px 2px #D2DDE5;
+}
+p{
+  font-size: 30px;
+}
+.profileImg {
+    border-radius: 50%;
+}
+#profiles{
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  height: 100%;
+}
+#profileName{
+  display: flex;
+  justify-content: space-around;
 }
