Artist Notification Page and created page that links to owner profile

--- a/artNotification.css
+++ b/artNotification.css
@@ -47,6 +47,7 @@ p{
   height: auto;
   transition: .5s ease;
   backface-visibility: hidden;
+  border-radius: 50%;
 }
 
 .middle {
@@ -89,6 +90,7 @@ p{
   height: auto;
   transition: .5s ease;
   backface-visibility: hidden;
+  border-radius: 50%;
 }
 
 .middle2 {
