--- a/artProfile.css
+++ b/artProfile.css
@@ -1,4 +1,4 @@
-img {
+#profile {
   height: 200px;
   width: 400px;
   margin: auto;
@@ -20,7 +20,7 @@ h1{
   background-color: #139C5A
 }
 #uploaded{
-  background-color: blue;
+  background-color: green;
 }
 #details{
   background-color: #993232;
@@ -30,4 +30,20 @@ p{
 }
 body{
   background-color: #494D5B;
+}
+.imagesWrapper{
+  display: flex;
+}
+.images{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.wallimage{
+  margin: 15px;
+  height: 200px;
+}
+button{
+  width: 100px;
+
 }
