--- a/index.css
+++ b/index.css
@@ -1,47 +1,103 @@
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 90%;
-  filter:opacity(70%);
+body {
+  background: #000;
 }
-.centered {
+.header {
+  position: relative;
+}
+
+.title {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+  top: 145px;
+  color: #fff;
+  width: 100%;
+}
+
+.title h1 {
+  text-align: center;
   font-size: 75px;
+}
+
+.title p {
   text-align: center;
+  margin-bottom: 30px;
 }
-h1{
-  text-align: center;
-  margin-top: auto;
-  color: #FF4040;
+
+.title .buttons {
+  margin-top: 30px
 }
-#moreAbout{
-  text-align: left;
-  color: #FF4040;
-}
-p {
-  text-align: center;
-  font-size: 40px;
-  color: white;
-}
-body{
-  background-color: black;
-}
-a {
-  text-decoration: none;
-}
-.pageBreak{
-  background-color: #0D0D0D;
-}
-li{
+
+.title button {
   font-size: 30px;
-  color: white;
 }
-#desc{
-  font-size: 30px;
-  color: white;
+
+.header-image {
+  opacity: .7;
+  width: 100%;
+}
+
+.navbar-brand {
+  margin: 0 auto;
+}
+
+.footer {
+  padding: 20px 0 0 0;
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+}
+
+.artist {
+  background: red;
+  color: #fff;
+}
+
+.content {
+  padding: 50px 0;
+}
+
+.content .container {
+  max-width: 600px;
+}
+
+.content h1 {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.quote {
+  margin-top: 50px;
+  font-style: italic;
+  margin-bottom: 0;
+}
+
+.author {
+  text-align: right;
+}
+
+.notice {
+  margin-top: 30px;
+}
+
+.profile-section {
+  height: 200px;
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 20px;
+  color: #fff;
+}
+
+.blue {
+  background: blue;
+}
+
+.red {
+  background: red;
+}
+
+.green {
+  background: green;
+}
+.buttonA{
+    text-decoration: none;
+    color: white;
 }
